@@ -38,6 +38,7 @@
 <p>2020-08-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/nt_base.c: Fix compilation issue noticed under MinGW.</li>
 <li>magick/render.c (DrawImage): Handle the case that
 ExtractTokensBetweenPushPop() can return NULL.  Fixes oss-fuzz
 24659 &quot;Null-dereference READ in DrawImage&quot;.</li>
